--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "homepage": "https://github.com/hygxmm/myBlog#readme",
     "devDependencies": {
         "vuepress": "^0.14.3"
+    },
+    "dependencies": {
+        "lottie-web": "^5.5.9"
     }
 }
