--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     },
     "homepage": "https://github.com/hygxmm/myBlog#readme",
     "devDependencies": {
+        "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
+        "@vuepress/plugin-back-to-top": "^1.0.0-rc.1",
+        "@vuepress/plugin-nprogress": "^1.0.0-rc.1",
         "vuepress": "^0.14.3"
     },
     "dependencies": {
