--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,3 +1,5 @@
+name: docs # workflow 名称
+
 on: # 触发条件
   # 每当 push 到 master 分支时触发部署
   push:
@@ -8,15 +10,18 @@ on: # 触发条件
 jobs:
   docs:
     runs-on: ubuntu-latest # 指定运行所需要的虚拟机环境
+
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
           # 选择要使用的 node 版本
           node-version: "14"
+
       # 缓存 node_modules
       - name: Cache dependencies
         uses: actions/cache@v2
@@ -27,13 +32,16 @@ jobs:
           key: ${{runner.os}}-yarn-${{hashFiles('**/yarn.lock')}}
           restore-keys: |
             ${{runner.os}}-yarn-
+
       # 如果缓存没有命中,安装依赖
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn --frozen-lockfile
+
       # 运行构建脚本
       - name: Build VuePress site
         run: yarn docs:build
+
       # 查看 workflow 文档来获取跟多信息 https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to Github Pages
         uses: crazy-max/ghaction-github-pages@v2
