--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -40,7 +40,8 @@ jobs:
 
       # 运行构建脚本
       - name: Build VuePress site
-        run: yarn docs:build
+        # run: yarn docs:build
+        run: yarn build
 
       # 查看 workflow 文档来获取跟多信息 https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to Github Pages
