--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "blog",
-    "version": "1.0.0",
-    "description": "默默地博客",
-    "main": "index.js",
-    "scripts": {
-        "dev": "vuepress dev docs",
-        "build": "vuepress build docs"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/hygxmm/myBlog.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/hygxmm/myBlog/issues"
-    },
-    "homepage": "https://github.com/hygxmm/myBlog#readme",
-    "devDependencies": {
-        "@vuepress/plugin-active-header-links": "^1.9.7",
-        "@vuepress/plugin-back-to-top": "^1.9.7",
-        "@vuepress/plugin-nprogress": "^1.9.7",
-        "vuepress": "^1.9.7"
-    },
-    "dependencies": {
-        "lottie-web": "^5.10.1"
-    }
+  "name": "blog",
+  "version": "0.0.1",
+  "description": "A static site based on dumi",
+  "scripts": {
+    "start": "npm run dev",
+    "dev": "dumi dev",
+    "build": "dumi build",
+    "prepare": "husky install && dumi setup"
+  },
+  "authors": [
+    "858965076@qq.com"
+  ],
+  "license": "MIT",
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.{md,json}": [
+      "prettier --write --no-error-on-unmatched-pattern"
+    ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "dumi": "^2.0.2",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1"
+  }
 }
