--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -53,4 +53,4 @@ jobs:
           # 部署到 master 分支
           target_branch: master
           # 部署目录为 VuePress 的默认输出目录
-          build_dir: docs/.vuepress/dist
+          build_dir: dist
