--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,7 +1,7 @@
 name: docs # workflow 名称
 
 on: # 触发条件
-  # 每当 push 到 master 分支时触发部署
+  # 每当 push 到 docs 分支时触发部署
   push:
     branches: [docs]
   # 是否手动触发部署
@@ -39,7 +39,7 @@ jobs:
         run: yarn --frozen-lockfile
 
       # 运行构建脚本
-      - name: Build VuePress site
+      - name: Build blog site
         # run: yarn docs:build
         run: yarn build
 
