--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dumi": "^2.0.2",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sass": "^1.69.1",
+    "sass-loader": "^13.3.2"
   },
   "authors": [
     "858965076@qq.com"
